# SO_1-Proiect

./: CMakeLists.txt  City_Manager.c  City_Manager.h  README.md  main.c  monitor_reports.c
Add_to_git/: CMakeLists.txt  City_Manager.c  City_Manager.h  main.c  monitor_reports.c
